tests/wpt/tests/third_party/test262/test/language/import/import-defer/errors/resolution-error/resolution-error_FIXTURE.js
// Copyright (C) 2024 Igalia, S.L. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

import "./missing.js";
